--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,7 @@ body {
 }
 
 .header {
-    /*background-color: brown;*/
-    padding-bottom: 3%;
+    padding-bottom: 0%;
 }
 
 .header a {
@@ -43,15 +42,18 @@ body {
 .icons_header {
     background-color: #223A59;
     text-align: right;
-    word-spacing: 700%;
     font-size: 18px;
     padding: 0.5% 2%;
+}
+
+.icons_header a {
+    padding-left: 1%;
 }
 
 .introduction {
     float: left;
     width: 60%;
-    padding: 5% 5%;
+    padding: 3% 5%;
     display: flex;
 }
 
@@ -74,48 +76,167 @@ body {
     padding: 5%;
 }
 
+.intro_text img {
+    padding-top: 15%;
+    width: 150px;
+}
+
+.intro_text #linkedin {
+    padding-left: 2%;
+}
+
 .sidebar {
-    /*background-color: greenyellow;*/
     float: right;
     width: 20%;
-    padding: 5% 5%;
+    padding: 3% 5% 5% 5%;
     display: flex;
 }
 
 .featured_project {
-    background-color: #223A59;
+    background-color: rgba(5,34,68,0.5);
     padding: 5%;
+    flex: auto;
 }
 
 .project_image {
-    background-color: #3684D8;
-    padding: 5%;
+    background-color: rgba(5,34,68,0.7);
+    padding: 2%;
     text-align: center;
+    flex: auto;
+}
+
+.project_image img {
+    width: 300px;
+    height: 100%;
+    padding: 1%;
+    max-width: 100%;
 }
 
 .project_description {
-    background-color: #3684D8;
+    background-color: rgba(5,34,68,0.7);
     padding: 5%;
+}
+
+.project_description p {
+    line-height: 25px;
 }
 
 .project_description h3 {
     line-height: 10px;
-    padding-top: 5%;
+    text-align: center;
+}
+
+.project_description a {
+    color: #223A59;;
+    text-decoration: none;
+    text-align: center;
+}
+
+.project_description a:hover {
+    text-decoration: underline;
+}
+
+.project_description a:active {
+    text-decoration: underline;
+    color: #031930;
 }
 
 .app_library {
-    /*background-color: yellow;*/
-    padding: 5% 10% 0 15%;
+    padding: 2% 2% 2% 5%;
     float: left;
     display: flex;
+    width: 60%;
 }
 
 .apps {
+    background-color: rgba(5,34,68,0.5);
     text-align: center;
-    word-spacing: 100px;
+    height: 100px;
+    width: 100%;
+    padding: 1% 3% 7% 3%;
+}
+
+.apps h2 {
+    padding: 0 0 1% 0;
+    margin: 0;
+}
+
+.apps a {
+    margin: 0 5%;
+}
+
+a.buttonJava {
+    height: 100px;
+    background-image: url(../media/java.png);
+    text-indent: -9999px;
+    display: inline-block;
+    width: 100px;
+    background-position: 0px 0px;
+}
+
+a.buttonJava:hover {
+    background-position: 0px -100px;
+}
+
+a.buttonPython {
+    height: 100px;
+    background-image: url(../media/python.png);
+    text-indent: -9999px;
+    display: inline-block;
+    width: 100px;
+    background-position: 0px 0px;
+}
+
+a.buttonPython:hover {
+    background-position: 0px -100px;
+}
+
+a.buttonHTML {
+    height: 100px;
+    background-image: url(../media/html.png);
+    text-indent: -9999px;
+    display: inline-block;
+    width: 100px;
+    background-position: 0px 0px;
+}
+
+a.buttonHTML:hover {
+    background-position: 0px -100px;
+}
+
+a.buttonCSS {
+    height: 100px;
+    background-image: url(../media/css.png);
+    text-indent: -9999px;
+    display: inline-block;
+    width: 100px;
+    background-position: 0px 0px;
+}
+
+a.buttonCSS:hover {
+    background-position: 0px -100px;
+}
+
+a.buttonSQL {
+    height: 100px;
+    background-image: url(../media/sql.png);
+    text-indent: -9999px;
+    display: inline-block;
+    width: 100px;
+    background-position: 0px 0px;
+}
+
+a.buttonSQL:hover {
+    background-position: 0px -100px;
 }
 
 footer {
     float: right;
-    padding-top: 3.5%;
+    padding-top: 3%;
+    padding-bottom: 0;
+    line-height: 0;
+}
+
+footer a {
+    color: white;
 }
