--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,13 @@
-/*
-Deep Blue #031930
-Dark Blue #223A59
-Blue #3684D8
-Light Blue #B3D6F9
-Light Blue #758BA5
-Gray #D1DDED
-*/
+/* Michael DeVito II */
+
+.poppins-font {
+    font-family: Poppins;
+    color: white;
+}
+.roboto-font {
+    font-family: Roboto;
+    color: white;
+}
 
 body {
     padding: 0;
@@ -16,6 +18,9 @@ body {
 
 .header {
     padding-bottom: 0%;
+    position: fixed;
+    width: 100%;
+    background-color: #223A59;
 }
 
 .header a {
@@ -48,6 +53,14 @@ body {
 
 .icons_header a {
     padding-left: 1%;
+}
+
+#current {
+    text-decoration: underline;
+}
+
+.main-content {
+    padding-top: 1%;
 }
 
 .introduction {
@@ -162,12 +175,12 @@ body {
 }
 
 .apps a {
-    margin: 0 5%;
+    margin: 0 2.5%;
 }
 
 a.buttonJava {
     height: 100px;
-    background-image: url(../media/java.png);
+    background-image: url(../media/apps/java.png);
     text-indent: -9999px;
     display: inline-block;
     width: 100px;
@@ -180,7 +193,7 @@ a.buttonJava:hover {
 
 a.buttonPython {
     height: 100px;
-    background-image: url(../media/python.png);
+    background-image: url(../media/apps/python.png);
     text-indent: -9999px;
     display: inline-block;
     width: 100px;
@@ -193,7 +206,7 @@ a.buttonPython:hover {
 
 a.buttonHTML {
     height: 100px;
-    background-image: url(../media/html.png);
+    background-image: url(../media/apps/html.png);
     text-indent: -9999px;
     display: inline-block;
     width: 100px;
@@ -206,7 +219,7 @@ a.buttonHTML:hover {
 
 a.buttonCSS {
     height: 100px;
-    background-image: url(../media/css.png);
+    background-image: url(../media/apps/css.png);
     text-indent: -9999px;
     display: inline-block;
     width: 100px;
@@ -219,7 +232,7 @@ a.buttonCSS:hover {
 
 a.buttonSQL {
     height: 100px;
-    background-image: url(../media/sql.png);
+    background-image: url(../media/apps/sql.png);
     text-indent: -9999px;
     display: inline-block;
     width: 100px;
