--- a/css/experience_styles.css
+++ b/css/experience_styles.css
@@ -36,8 +36,8 @@
 
 .resources_footer {
     text-align: center;
-    margin: 80% 20% 0 20%;
+    margin: 105% 20% 5% 20%;
     padding: 0.5% 0;
     background-color: rgba(5,34,68,0.7);
-    overflow: hidden;
+    height: 100px;
 }
