--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
     margin: 0;
     background-image: url("../media/background.png");
     background-repeat: repeat;
-    background-color: #031930;
+    background-color: #0B131E;
 }
 
 .header_background {
@@ -95,11 +95,17 @@ body {
     float: left;
     padding: 7% 0 7% 8%;
     opacity: 1;
+    width: auto;
+    max-width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .intro_image img {
-    width: 300px;
-    height: 100%;
+    max-width: 300px;
+    height: auto;
     border-radius: 55%;
 }
 
@@ -263,10 +269,11 @@ a.buttonSQL:hover {
 }
 
 footer {
-    float: right;
-    padding-top: 3%;
-    padding-bottom: 0;
-    line-height: 0;
+    position: relative;
+    bottom: 0;
+    right: 0;
+    text-align: right;
+    padding-right: 1%;
 }
 
 footer a {
